welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:23: error: ';' expected but '=' found.
	nbBiscuit:Int = 0
                      ^